<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.training</groupId>
  <artifactId>JoinImplementation</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
	  <java.version>1.15</java.version>
	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <build>
	  <plugins>	  
		  <plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <version>3.8.1</version>
			  <configuration>
			  	<source>${java.version}</source>
			  	<target>${java.version}</target>
                <compilerArgs>--enable-preview</compilerArgs>
	           </configuration>
		  </plugin>
		  
		  <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>3.0.0-M5</version>
		  </plugin>
	  </plugins>  
  </build>

</project>